force-app/main/default/objects/Solicitacao_Credito__c/Solicitacao_Credito__c.object-meta.xml
<CustomObject>
    <label>Solicitação de Crédito</label>
    <nameField>
        <label>Solicitacao_Credito</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solicitações de Crédito</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>