force-app/main/default/objects/Solicitacao_Credito__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Solicitações de Crédito</relationshipLabel>
    <relationshipName>Solicitacoes_Credito</relationshipName>
    <type>Lookup</type>
</CustomField>