force-app/main/default/objects/Solicitacao_Credito__c/fields/Qtd_Parcelas__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Parcelas__c</fullName>
    <label>Qtd_Parcelas</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>