force-app/main/default/objects/Solicitacao_Credito__c/fields/Renda_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Renda_Mensal__c</fullName>
    <label>Renda_Mensal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>