force-app/main/default/objects/Solicitacao_Credito__c/fields/Score_Calculado__c.field-meta.xml
<CustomField>
    <fullName>Score_Calculado__c</fullName>
    <inlineHelpText>Score 0 - 1000</inlineHelpText>
    <label>Score_Calculado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>