force-app/main/default/objects/Solicitacao_Credito__c/fields/Taxa_Juros_Aplicada__c.field-meta.xml
<CustomField>
    <fullName>Taxa_Juros_Aplicada__c</fullName>
    <label>Taxa_Juros_Aplicada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>