force-app/main/default/objects/Solicitacao_Credito__c/fields/Valor_Solicitado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Solicitado__c</fullName>
    <label>Valor_Solicitado</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>